# uav-traffic-vision

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  pyproject.toml
app/: app.py  requirements.txt
notebooks/: train_colab.ipynb  train_yolo26_visdrone_colab.ipynb  train_yolo26obb_dota_colab.ipynb
reports/: dataset_stats.md  dota_obb_evaluation.md  dota_stats.md  edge_benchmark.json  edge_benchmark.md  evaluation.md  evaluation_1024.md  sahi_comparison.json  sahi_comparison.md  traffic_analysis.md
reports/traffic/: stats.json
scripts/: dataset_stats.py  dota_stats.py  evaluate.py  evaluate_dota_obb.py  export_benchmark.py  fetch_visdrone_mot.py  make_subset.py  prepare_dota_obb.py  sahi_compare.py  traffic_count.py
