[project]
name = "uav-traffic-vision"
version = "0.1.0"
description = "Drone-view small-object detection and traffic flow analysis with Ultralytics YOLO26 on VisDrone, SAHI sliced inference, and ByteTrack counting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ultralytics>=8.4.0",
    "sahi>=0.11.20",
    "pycocotools>=2.0.7",
    "opencv-python>=4.10",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.26",
]

[dependency-groups]
dev = [
    "nbformat>=5.10",
]
